crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisiability@changed-env-marker.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/mod.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'osx-arm64'
    Diagnostic severity: error
    Caused by: the requirement 'numpy==2.* ; sys_platform == 'darwin'' could not be satisfied (required by '<environment>')
