crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisiability@mismatch-pypi-prerelease-mode.snap
---
source: src/lock_file/satisfiability/mod.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project
    Diagnostic severity: error
    Caused by: the lock-file was solved with a different PyPI prerelease mode (if-necessary-or-explicit) than the one selected (allow)
